<resources>
    <string name="app_name">My Contacts</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_email_address">Your email address</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="fill">Please fill the blank spaces!</string>
    <string name="not_same">Passwords are not same!</string>
    <string name="verify">Success: Please check your email address to verify!</string>
    <string name="verif2">Please verify your email!</string>
    <string name="enter_email">Please enter your email address!</string>
    <string name="reset">Success: Please check your email address to reset password!</string>
    <string name="new_contact">New Contact</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="required">(required)</string>
    <string name="optional">optional</string>
    <string name="name_">Full Name:</string>
    <string name="surname">Surname:</string>
    <string name="phone_1">Phone 1:</string>
    <string name="phone_2">Phone 2:</string>
    <string name="email">Email:</string>
    <string name="instagram">Instagram:</string>
    <string name="facebook">Facebook:</string>
    <string name="twitter">Twitter:</string>
    <string name="linkedin">Linkedin:</string>
    <string name="snapchat">Snapchat:</string>
    <string name="skype">Skype:</string>
    <string name="website">Website:</string>
    <string name="save">Save</string>
    <string name="empty">Empty</string>
    <string name="no_internet">No Internet</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="filter">filter</string>
    <string name="hidden">Hidden</string>
    <string name="family">Family</string>
    <string name="friend">Friend</string>
    <string name="work">Work</string>
    <string name="girl_friend">Girl Friend</string>
    <string name="boy_friend">Boy Friend</string>
    <string name="best_friend">Best Friend</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="okay">Okay</string>
    <string name="school">School</string>
    <string name="rate">Rate Us</string>
    <string name="banner_ad">ca-app-pub-3531666375863646/6180464035</string>
    <string name="interstitial_ad">ca-app-pub-3531666375863646/4867382366</string>

    <string-array name="category">
        <item>Family</item>
        <item>Friend</item>
        <item>Work</item>
        <item>School</item>
        <item>Other</item>
    </string-array>
</resources>
