<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/colorTwo"
        app:indicatorName="BallRotateIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/innerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_errorColor="@color/colorError"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="email"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/sendBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:text="@string/send"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_background"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>